# c_example

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
src/: CMakeLists.txt  main.c
src/libs/: CMakeLists.txt  example_lib_a.c  example_lib_a.h  example_lib_b.c  example_lib_b.h
tests/: CMakeLists.txt  test_example_lib_b.c  test_fail.c  test_pass.c
